--- a/test/fixtures/software.yml
+++ b/test/fixtures/software.yml
@@ -14,6 +14,6 @@ two:
   description: Another description
   thumbnail_url: another.url
   creator: bar
-  examples: [examples(one)]
-  web_resources: [web_resources(one)]
-  tags: [tags(one)]
+  examples: one
+  web_resources: one
+  tags: one
