Added tests for the datasets controller.

--- a/test/fixtures/examples.yml
+++ b/test/fixtures/examples.yml
@@ -5,3 +5,7 @@ one:
   # analysis:
   title: "Example 1"
   description: "An example!"
+
+two:
+  title: "Example 2"
+  description: "Another example!"
