Added initial views, controller, controller test for assignments.
All tests passing. Haven't yet added a way to associate verticals with
assignments.

--- a/test/fixtures/assignments.yml
+++ b/test/fixtures/assignments.yml
@@ -18,6 +18,9 @@ two:
   name: Assignment 2
   summary: A brief summary
   description: A long description
+  examples: two
+  web_resources: two
+  tags: two, five
 
 thress:
   creator: bar
