Added tests for assignment-assignment delinking.
Also removed routes for associating arbitrary verticals; currently, only
assignments can be linked to other verticals, however the code to do the
linking for any pair of verticals is there.

--- a/test/fixtures/assignments.yml
+++ b/test/fixtures/assignments.yml
@@ -24,10 +24,13 @@ two:
   datasets: one
   software: one
   analyses: one
+  # assignments_related_from: one
 
-thress:
+three:
   creator: bar
   author: Bar Car
   name: Assignment 3
   summary: A brief summary
   description: A long description
+  # assignments_related_from: one
+  # assignments_related_to: one
