--- a/test/fixtures/datasets.yml
+++ b/test/fixtures/datasets.yml
@@ -2,7 +2,7 @@
 
 one:
   name: A name
-  summary: A summary
+  summary: apple banana
   description: A description
   thumbnail_url: a.url
   creator: foo
@@ -10,8 +10,8 @@ one:
   
 two:
   name: Another name
-  summary: Another summary
-  description: Another description
+  summary: lion tiger bear lion
+  description: lion tiger tiger tiger
   thumbnail_url: another.url
   creator: bar
   examples: two
