Added an integration test for basic search.

--- a/test/fixtures/software.yml
+++ b/test/fixtures/software.yml
@@ -17,3 +17,53 @@ two:
   examples: one
   web_resources: one
   tags: one
+  
+three:
+  name: software 3
+  summary: software 3
+  description: software 3
+  
+four:
+  name: software 4
+  summary: software 4
+  description: software 4
+  
+five:
+  name: software 5
+  summary: software 5
+  description: software 5
+  
+six:
+  name: software 6
+  summary: software 6
+  description: software 6
+
+seven:
+  name: software 7
+  summary: software 7
+  description: software 7
+  
+eight:
+  name: software 8
+  summary: software 8
+  description: software 8
+  
+nine:
+  name: software 9
+  summary: software 9
+  description: software 9
+  
+ten:
+  name: software 10
+  summary: software 10
+  description: software 10
+  
+eleven:
+  name: software 11
+  summary: software 11
+  description: software 11
+  
+twelve:
+  name: software 12
+  summary: software 12
+  description: software 12
