Added an integration test for basic search.

--- a/test/fixtures/software.yml
+++ b/test/fixtures/software.yml
@@ -19,33 +19,33 @@ two:
   tags: one
   
 three:
-  name: software 3
+  name: software 3 green
   summary: software 3
   description: software 3
   
 four:
-  name: software 4
+  name: software 4 green
   summary: software 4
   description: software 4
   
 five:
-  name: software 5
+  name: software 5 green
   summary: software 5
   description: software 5
   
 six:
   name: software 6
-  summary: software 6
+  summary: software 6 green
   description: software 6
 
 seven:
   name: software 7
-  summary: software 7
+  summary: software 7 green
   description: software 7
   
 eight:
   name: software 8
-  summary: software 8
+  summary: software 8 green
   description: software 8
   
 nine:
@@ -56,14 +56,29 @@ nine:
 ten:
   name: software 10
   summary: software 10
-  description: software 10
+  description: software 10 green
   
 eleven:
   name: software 11
   summary: software 11
-  description: software 11
+  description: software 11 green
   
 twelve:
   name: software 12
   summary: software 12
-  description: software 12
+  description: software 12 green
+  
+thirteen:
+  name: software 13
+  summary: software 13
+  description: software 13
+  
+fourteen:
+  name: software 14
+  summary: software 14
+  description: software 14
+  
+fifteen:
+  name: software 15
+  summary: software 15
+  description: software 15
