--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,7 +12,7 @@ foo:
   activated: true
   activated_at: 2015-11-02 16:00:00
   remember_digest:
-  permission_level: editor
+  permission_level: admin
 
 bar:
   username: barster
