--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -19,6 +19,8 @@ bar:
   first_name: Bar 
   last_name: Foo
   email: bar@gmail.com
+  role: Student
+  field_of_study: ENG
   password_digest:  <%= User.digest('password') %>
   activation_digest:
   activated: true
