Fixed fixtures so that every software entry has a creator (was causing tests to fail).

--- a/test/fixtures/software.yml
+++ b/test/fixtures/software.yml
@@ -22,63 +22,76 @@ three:
   name: software 3 green
   summary: software 3
   description: software 3
+  creator: bar
   
 four:
   name: software 4 green
   summary: software 4
   description: software 4
+  creator: bar
   
 five:
   name: software 5 green
   summary: software 5
   description: software 5
+  creator: bar
   
 six:
   name: software 6
   summary: software 6 green
   description: software 6
+  creator: bar
 
 seven:
   name: software 7
   summary: software 7 green
   description: software 7
+  creator: bar
   
 eight:
   name: software 8
   summary: software 8 green
   description: software 8
+  creator: bar
   
 nine:
   name: software 9
   summary: software 9
   description: software 9
+  creator: bar
   
 ten:
   name: software 10
   summary: software 10
   description: software 10 green
+  creator: bar
   
 eleven:
   name: software 11
   summary: software 11
   description: software 11 green
+  creator: bar
   
 twelve:
   name: software 12
   summary: software 12
   description: software 12 green
+  creator: bar
   
 thirteen:
   name: software 13
   summary: software 13
   description: software 13
+  creator: bar
   
 fourteen:
   name: software 14
   summary: software 14
   description: software 14
+  creator: bar
   
 fifteen:
   name: software 15
   summary: software 15
+  creator: bar
   description: software 15
