--- a/test/fixtures/assignment_results.yml
+++ b/test/fixtures/assignment_results.yml
@@ -1,31 +1,31 @@
-one:
-  assignment: one
-  instructor: Pat Smith
-  course_prefix: CSC
-  course_number: "101"
-  course_title: Intro to Computer Science
-  field_of_study: Computer Science
-  semester: Fall 2010
-  project_length_weeks: 3
-  students_given_assignment: 15
-  instruction_hours: 3.5
-  average_student_score: 3.2
-  outcome_summary: A long summary.
-  creator: foo
+# one:
+#   assignment: one
+#   instructor: Pat Smith
+#   course_prefix: CSC
+#   course_number: "101"
+#   course_title: Intro to Computer Science
+#   field_of_study: Computer Science
+#   semester: Fall 2010
+#   project_length_weeks: 3
+#   students_given_assignment: 15
+#   instruction_hours: 3.5
+#   average_student_score: 3.2
+#   outcome_summary: A long summary.
+#   creator: foo
 
 
 
-two:
-  instructor: Pat Smith
-  course_prefix: HST
-  course_number: "102"
-  course_title: History of the World
-  field_of_study: History
-  semester: Spring 2020
-  project_length_weeks: 3
-  students_given_assignment: 15
-  instruction_hours: 3.5
-  average_student_score: 3.2
-  outcome_summary: A long summary.
-  creator: bar
+# two:
+#   instructor: Pat Smith
+#   course_prefix: HST
+#   course_number: "102"
+#   course_title: History of the World
+#   field_of_study: History
+#   semester: Spring 2020
+#   project_length_weeks: 3
+#   students_given_assignment: 15
+#   instruction_hours: 3.5
+#   average_student_score: 3.2
+#   outcome_summary: A long summary.
+#   creator: bar
   
