Completed AssignmentGroup model tests.

--- a/test/fixtures/assignments.yml
+++ b/test/fixtures/assignments.yml
@@ -53,3 +53,12 @@ four:
   course_title: Writing Essays
   field_of_study: English
   semester: Winter 2017
+
+five:
+  creator: bar
+  instructors: foo, bar
+  course_prefix: ENG
+  course_number: 302
+  course_title: Writing Essays
+  field_of_study: English
+  semester: Winter 2017
