Fixed up some issue introduced to controller and model tests.

--- a/test/fixtures/software.yml
+++ b/test/fixtures/software.yml
@@ -107,3 +107,10 @@ multiSoftware1:
   summary: a summary
   creator: foo
   description: a description
+
+multiSoftware2:
+  name: multiSoftware2
+  summary: a summary
+  creator: foo
+  description: a description
+  tags: soloTag_SoftwareOne
