--- a/application.EXAMPLE.yml
+++ b/application.EXAMPLE.yml
@@ -65,6 +65,9 @@ development:
   SOLR_PORT: "8982"
   SOLR_LOG_LEVEL: "INFO"
   SOLR_PATH: "/solr/development"
+  
+  DEV_HOST_PORT: "3000"
+
 
 ## Test settings.
 test:
