--- a/application.EXAMPLE.yml
+++ b/application.EXAMPLE.yml
@@ -25,6 +25,15 @@ FROM_EMAIL: "noreply@localhost"
 ## Set this to the email address of the webmaster or site maintainer.
 WEBSITE_CONTACT: "webmaster@localhost:3000"
 
+## Pages that trigger emails (signup, password reset, email update) and logins
+## use reCAPTCHA v2 "I'm not a robot" Checkbox to prevent abuse from bots.
+## Register for a reCAPTCHA v2 key here:
+## https://www.google.com/recaptcha/admin/create
+##
+## Add your keys below:
+RECAPTCHA_SITE_KEY: "xxxxxxxxx"
+RECAPTCHA_SECRET_KEY: "xxxxxxxxx"
+
 ## Production settings.
 production:
   ## Set this to a very long, random string, like the result of running:
